<resources>
    <string name="app_name">memojjang</string>
    <string name="memoMainTittle">MEMOJJang</string>
    <string name="memoMainSearch">검색</string>
    <string name="memoMainSub">MyCloud</string>
    <string name="btnCancel">취 소</string>
    <string name="nameEditTxt">이름</string>
    <string name="dialogSubTittle">폴더의 이름을 입력하세요</string>
    <string name="dialogMainTittle">새로운 폴더</string>
    <string name="btnOk">확 인</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="checkOk">확인</string>
    <string name="backFolder"><![CDATA[<폴더]]></string>
    <string name="memoSub">Memo</string>
</resources>